<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/back_nav">

    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp" >
 
        <TextView
           android:id="@+id/txt_titre"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_titre_size"
           android:textColor="@color/txt_titre_color"
           android:text="@string/parameter_txt_titre" />
  </LinearLayout>    
   <LinearLayout
       	android:id="@+id/layout2"
       	android:layout_below="@+id/layout1"
		android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >
 
       <TextView
           android:id="@+id/parameter_titre_txt_camera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_sub_titre_size"
           android:textColor="@color/txt_sub_titre_color"
           android:text="@string/parameter_titre_txt_camera" />

      	<TextView
           android:id="@+id/parameter_txt_camera"
           android:layout_below="@+id/parameter_titre_txt_camera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:paddingTop="20dp"
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color"
           android:text="@string/parameter_txt_camera" />
            
      	<Button
        	android:id="@+id/btn_parameter_camera"
			android:layout_below="@+id/parameter_txt_camera"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
        	android:layout_gravity="center_horizontal"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_parameter_camera"/>
      	
      	<TextView
           android:id="@+id/parameter_titre_txt_abo"
           android:layout_below="@+id/btn_parameter_camera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_sub_titre_size"
           android:textColor="@color/txt_sub_titre_color"
           android:text="@string/parameter_titre_txt_abo" />

      	<TextView
           android:id="@+id/parameter_txt_abo"
           android:layout_below="@+id/parameter_titre_txt_abo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:paddingTop="20dp"
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color"
           android:text="@string/parameter_txt_abo" />
            
      	<Button
        	android:id="@+id/btn_parameter_abo"
			android:layout_below="@+id/parameter_txt_abo"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
        	android:layout_gravity="center_horizontal"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_parameter_abo"/>
     
      	
      		<TextView
           android:id="@+id/parameter_titre_personnal"
           android:layout_below="@+id/btn_parameter_abo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_sub_titre_size"
           android:textColor="@color/txt_sub_titre_color"
           android:text="@string/parameter_titre_txt_personnal" />

      	<TextView
           android:id="@+id/parameter_txt_personnal"
           android:layout_below="@+id/parameter_titre_txt_personnal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:paddingTop="20dp"
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color"
           android:text="@string/parameter_txt_personnal" />
            
      	<Button
        	android:id="@+id/btn_parameter_personnal"
			android:layout_below="@+id/parameter_txt_personnal"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
        	android:layout_gravity="center_horizontal"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_parameter_personnal"/>
      	  	  	  
   	</LinearLayout>    
</RelativeLayout>
