<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/back_nav">

    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp" >
 
        <TextView
           android:id="@+id/txt_titre"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_titre_size"
           android:textColor="@color/txt_titre_color"
           android:text="@string/add3_txt_titre" />
  </LinearLayout>    
  
      		
   <LinearLayout
       	android:id="@+id/layout2"
       	android:layout_below="@+id/layout1"
		android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >
 
       
              	<TextView
           android:id="@+id/add_txt_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color"
           android:text="@string/add3_txt_1" />

      	<TextView
           android:id="@+id/add_txt_2"
           android:layout_below="@+id/add_txt_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:paddingTop="20dp"
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/txt_titre_size"
           android:textColor="@color/txt_titre_color"
           android:text="@string/add3_txt_2" />
            
    	<TextView
           android:id="@+id/add_txt_3"
           android:layout_below="@+id/add_txt_2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color"
           android:text="@string/add3_txt_3" />
               	
	  	<Button
        	android:id="@+id/btn_start"
			android:layout_below="@+id/add_txt_3"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
        	android:layout_gravity="center_horizontal"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_add3_start"/>
               	  			
       		 
   	</LinearLayout>
   
   <LinearLayout
       	android:id="@+id/layout3"
       	android:layout_below="@+id/layout2"
		android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp" >
 
       
              	<TextView
           android:id="@+id/add_txt_4"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color"
           android:text="@string/add3_txt_4" />

          
            <Button
        	android:id="@+id/btn_helpwifi"
			android:layout_below="@+id/add_txt_4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:padding="10dp"
        	android:layout_gravity="center_horizontal"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_add3_help"/>
               	  			
       		 
   	</LinearLayout>
   
    	
</RelativeLayout>
