<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"
    android:background="@drawable/back_nav">

    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp" >
 
        <TextView
           android:id="@+id/txt_titre"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/controlchoise_txt_titre"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_titre_size"
           android:textColor="@color/txt_titre_color" />
  </LinearLayout>  
  
     <LinearLayout
        android:id="@+id/layout2"
        android:layout_below="@+id/layout1"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp" >
 
        <TextView
           android:id="@+id/txt_1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/controlchoise_txt_ask"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_color" />
  </LinearLayout>  
    
   <LinearLayout
       	android:id="@+id/layout3"
       	android:layout_below="@+id/layout2"
		android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp" >
 
       
       <Button
        	android:id="@+id/btn_choise_manual"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="50"
        	android:padding="10dp"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_choise_manual"/>

              <Button
        	android:id="@+id/btn_choise_voice"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="50"
        	android:padding="10dp"
        	android:textSize="@dimen/txt_button_size"
           	android:textColor="@color/btn_txt_color"
        	android:background="@drawable/android_button"
        	android:text="@string/btn_choise_voice"/>
       
    		</LinearLayout>
    		
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_below="@+id/layout3"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp" >
 
        <TextView
           android:id="@+id/controlchoise_txt_titre_camera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_sub_titre_size"
           android:textColor="@color/txt_sub_titre_color"
           android:text="@string/controlchoise_txt_titre_camera" />
        
        <TextView
           android:id="@+id/controlchoise_txt_camera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_titre_color"
           android:layout_gravity="center_horizontal"
           android:text="@string/controlchoise_txt_camera" />
        
         <TextView
           android:id="@+id/controlchoise_txt_titre_actualcamera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:textSize="@dimen/txt_sub_titre_size"
           android:textColor="@color/txt_sub_titre_color"
           android:text="@string/controlchoise_txt_titre_actualcamera" />
        
        <TextView
           android:id="@+id/controlchoise_txt_actualcamera"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/txt_size"
           android:textColor="@color/txt_titre_color"
           android:text="@string/controlchoise_txt_actualcamera" />
        
  </LinearLayout>  
  
    <LinearLayout
        android:id="@+id/layout5"
        android:layout_below="@+id/layout4"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >
        
       <ImageView
        android:id="@+id/controlchoise_img_wifi"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:src="@drawable/pix_control_alert" /> 
    	
       
        <TextView
           android:id="@+id/controlchoise_txt_typecamera"
           android:layout_below="@+id/controlchoise_img_wifi"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingLeft="12dp" 
           android:layout_gravity="center_horizontal"
           android:textSize="@dimen/txt_titre_size"
           android:textColor="@color/txt_titre_color"
           android:text="@string/controlchoise_txt_typecamera" />
    	
     	
     	
   </LinearLayout>		    
 
   
</RelativeLayout>
